--- a/config/database.yml
+++ b/config/database.yml
@@ -11,12 +11,7 @@ default: &default
   database: db/development.sqlite3
 
 development:
-  adapter: postgresql
-  encoding: unicode
-  host: db
-  username: postgres
-  password:
-  pool: 5
+  <<: *default
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
